--- a/src/scss/_new-services.scss
+++ b/src/scss/_new-services.scss
@@ -30,9 +30,30 @@
     }
 
     @media (min-width: 1200px) {
+
+
       &:hover {
         z-index: 2;
-        transform: scale(1.1);
+        transform: scale(1.06);
+        box-shadow: 0 10px 65px rgba(43, 51, 60, .2);
+      }
+
+      &.grid-column-3 {
+        &:hover {
+          z-index: 2;
+          transform: scale(1.05);
+          box-shadow: 0 10px 65px rgba(43, 51, 60, .2);
+        }
+
+      }
+
+      &.grid-column-6 {
+        &:hover {
+          z-index: 2;
+          transform: scale(1.03);
+          box-shadow: 0 10px 65px rgba(43, 51, 60, .2);
+        }
+
       }
 
       &:hover {
@@ -44,6 +65,13 @@
       }
     }
 
+    .services__link {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding-bottom: 48px;
+      height: 100%;
+    }
   }
 
   .services__item-descr {
@@ -82,7 +110,7 @@
 
   &__link-wrapper {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
 
 
@@ -136,10 +164,10 @@
     }
 
     @media (min-width: 1200px) {
-      &:hover {
-        transform: scale(1.1);
-        z-index: 2;
-      }
+      // &:hover {
+      //   transform: scale(1.03);
+      //   z-index: 2;
+      // }
     }
 
 
@@ -160,10 +188,10 @@
 
 
   @media (min-width: 1200px) {
-    &:hover {
-      transform: scale(1.1) translateX(-28px);
-      z-index: 2;
-    }
+    // &:hover {
+    //   transform: scale(1.03) translateX(-28px);
+    //   z-index: 2;
+    // }
   }
 
 }
@@ -173,10 +201,10 @@
   @media (min-width: 1200px) {
     transform: translateX(-166px);
 
-    &:hover {
-      transform: scale(1.1) translateX(-164px);
-      z-index: 2;
-    }
+    // &:hover {
+    //   transform: scale(1.03) translateX(-164px);
+    //   z-index: 2;
+    // }
   }
 
 }
@@ -186,10 +214,10 @@
   margin-right: -50px;
 
   @media (min-width: 1200px) {
-    &:hover {
-      transform: scale(1.1);
-      z-index: 2;
-    }
+    // &:hover {
+    //   transform: scale(1.03);
+    //   z-index: 2;
+    // }
   }
 
 }
@@ -208,10 +236,10 @@
   transform: translateX(-216px);
 
   @media (min-width: 1200px) {
-    &:hover {
-      transform: scale(1.1) translateX(-216px);
-      z-index: 2;
-    }
+    // &:hover {
+    //   transform: scale(1.03) translateX(-216px);
+    //   z-index: 2;
+    // }
 
   }
 
@@ -224,11 +252,11 @@
 .animation-scale-1 {
   transition: animation 0.2s linear;
 
-  @media (min-width: 1200px) {
-    &:hover {
-      animation: scaleTransformX 3s linear both;
-    }
-  }
+  // @media (min-width: 1200px) {
+  //   &:hover {
+  //     animation: scaleTransformX 3s linear both;
+  //   }
+  // }
 
 }
 
@@ -340,5 +368,52 @@
 
   .services__more-arrow {
     filter: invert(1);
+  }
+
+  .services__item {
+    overflow: hidden;
+
+    transition: 0.2s linear;
+
+
+    @media (max-width: $breakpoint992) {
+      grid-column: span 6;
+    }
+
+    @media (min-width: 1200px) {
+
+
+      &:hover {
+        z-index: 2;
+        transform: scale(1.06);
+        box-shadow: 0 10px 65px rgba(140, 140, 141, 0.2);
+      }
+
+      &.grid-column-3 {
+        &:hover {
+          z-index: 2;
+          transform: scale(1.05);
+          box-shadow: 0 10px 65px rgba(140, 140, 141, 0.2);
+        }
+
+      }
+
+      &.grid-column-6 {
+        &:hover {
+          z-index: 2;
+          transform: scale(1.03);
+          box-shadow: 0 10px 65px rgba(140, 140, 141, 0.2);
+        }
+
+      }
+
+      &:hover {
+        background-color: var(--white-color);
+
+        .services__more-arrow {
+          transform: translateX(0);
+        }
+      }
+    }
   }
 }
