--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -22,6 +22,22 @@
   }
 }
 
+html {
+  font-feature-settings: "kern"1, "liga"0, "clig"0;
+  -moz-font-feature-settings: "kern"1, "liga"0, "clig"0;
+  -ms-font-feature-settings: "kern"1, "liga"0, "clig"0;
+  -o-font-feature-settings: "kern"1, "liga"0, "clig"0;
+  -webkit-font-feature-settings: "kern"1, "liga"0, "clig"0;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font: 13px/18px haas, pragmatica, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, Arial, sans-serif;
+  font-kerning: normal;
+  text-rendering: optimizeLegibility;
+}
+
+
 // Body Locked
 body {
   background-color: var(--grey-color-2);
