--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -22,6 +22,10 @@
       color: #8F8F92;
     }
 
+    .settings__title-orange {
+      color: #FFA469;
+    }
+
     @media (max-width: $breakpoint992) {
       margin-bottom: 60px;
       font-size: 40px;
@@ -31,6 +35,8 @@
       font-size: 30px;
     }
   }
+
+
 
   // .settings__support
 
