--- a/src/scss/_integrated.scss
+++ b/src/scss/_integrated.scss
@@ -173,3 +173,424 @@
 
   }
 }
+
+
+
+
+.integrated {
+
+  // .integrated__stages
+
+  &__stages {
+    display: flex;
+    flex-direction: column;
+    row-gap: 64px;
+    margin-bottom: 192px;
+
+    @media (max-width: $breakpoint992) {
+      margin-bottom: 120px;
+      row-gap: 40px;
+    }
+
+    @media (max-width: $breakpoint768) {
+      margin-bottom: 60px;
+      row-gap: 30px;
+    }
+
+  }
+
+  // .integrated__stage
+
+  &__stage {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 16px;
+    min-height: 1200px;
+    padding: 16px;
+    border-radius: 24px;
+    background-color: var(--white-color);
+
+    transition: transform 0.5s ease;
+
+    &:last-child {
+      min-height: 900px;
+    }
+
+
+    &:hover {
+      transform: scale(1.06);
+    }
+
+    @media (max-width: $breakpoint992) {
+      grid-template-columns: repeat(1, 1fr);
+      min-height: 0;
+    }
+
+    @media (max-width: $breakpoint768) {
+      padding: 8px;
+    }
+  }
+
+  // .integrated__black
+
+  &__black {
+    position: relative;
+    padding: 40px;
+    border-radius: 12px;
+    background-color: var(--main-color);
+    color: var(--white-color);
+    z-index: 3;
+
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('../img/Graphic\ line\ light\ right.svg');
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center bottom;
+      z-index: 1;
+
+      user-select: none;
+      pointer-events: none;
+
+      @media (max-width: $breakpoint992) {
+        background-position: right bottom;
+      }
+
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 36px;
+      left: 40px;
+      width: 300px;
+      height: 190px;
+      background-image: url('../img/kg.svg');
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center bottom;
+      z-index: 2;
+
+      user-select: none;
+      pointer-events: none;
+
+      @media (max-width: $breakpoint992) {
+        left: auto;
+        right: 20px;
+        bottom: 20px;
+        width: 200px;
+        height: 200px;
+      }
+
+      @media (max-width: $breakpoint768) {
+        content: none;
+      }
+    }
+
+
+    @media (max-width: $breakpoint768) {
+      padding: 20px;
+    }
+  }
+
+  // .integrated__black-header
+
+  &__black-header {
+    margin-bottom: 64px;
+
+    @media (max-width: $breakpoint768) {
+      margin-bottom: 40px;
+    }
+  }
+
+  // .integrated__black-list
+
+  &__black-list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 12px;
+
+    @media (max-width: $breakpoint768) {
+      column-gap: 8px;
+    }
+  }
+
+  // .integrated__black-item
+
+  &__black-item {
+    display: grid;
+    row-gap: 24px;
+
+    &.active {
+      .integrated__black-item-text {
+        color: var(--white-color);
+      }
+
+      .integrated__black-item-icon svg path {
+        fill: #FFA469;
+      }
+    }
+
+    @media (max-width: $breakpoint768) {
+      row-gap: 16px;
+    }
+  }
+
+  // .integrated__black-item-times
+
+  &__black-item-times {}
+
+  // .integrated__black-item-icon
+
+  &__black-item-icon {
+    width: 24px;
+    height: 24px;
+    margin-bottom: 14px;
+
+    @media (max-width: $breakpoint768) {
+      width: 16px;
+      height: 16px;
+    }
+  }
+
+  // .integrated__black-item-text
+
+  &__black-item-text {
+    white-space: nowrap;
+    font-weight: 400;
+    line-height: 140%;
+    font-size: 15px;
+    color: #585960;
+
+    @media (max-width: $breakpoint768) {
+      font-size: 12px;
+    }
+  }
+
+  // .integrated__black-item-border
+
+  &__black-item-border {
+    width: 100%;
+    height: 6px;
+    border-radius: 6px;
+    background-color: #585960;
+
+    &.active {
+      background-color: #FFA469;
+    }
+
+    @media (max-width: $breakpoint768) {
+      height: 4px;
+    }
+  }
+
+  // .integrated__black-step
+
+  &__black-step {}
+
+  // .integrated__black-step-label
+
+  &__black-step-label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    padding: 8px;
+    // margin-bottom: 32px;
+    border-radius: 8px;
+    background-color: #585960;
+
+    letter-spacing: 1.1px;
+    text-transform: uppercase;
+    font-weight: 700;
+    line-height: normal;
+    font-size: 11px;
+    color: #f3f0f0;
+  }
+
+  // .integrated__black-step-sum
+
+  &__black-step-sum {
+    // margin-bottom: 32px;
+    font-size: 128px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-align: left;
+    text-shadow: -1px 0 0 #FFA469, 1px 0 0 #FFA469, 0 -1px 0 #FFA469, 0 1px 0 #FFA469;
+    color: var(--main-color);
+  }
+
+  // .integrated__black-step-descr
+
+  &__black-step-descr {
+    max-width: 180px;
+    width: 100%;
+    font-weight: 300;
+    line-height: 140%;
+    font-size: 17px;
+
+    @media (max-width: $breakpoint768) {
+      font-size: 15px;
+    }
+  }
+
+  // .integrated__black-pictures
+
+  &__black-pictures {
+    position: absolute;
+    z-index: 3;
+    text-align: right;
+    bottom: 50px;
+    right: 0;
+
+    @media (max-width: $breakpoint992) {
+      display: none;
+    }
+  }
+
+  // .integrated__black-picture
+
+  &__black-picture {}
+
+  // .integrated__white
+
+  &__white {
+    display: flex;
+    flex-direction: column;
+    padding: 84px;
+    color: var(--main-color);
+
+    @media (max-width: $breakpoint992) {
+      padding: 40px;
+    }
+
+    @media (max-width: $breakpoint768) {
+      padding: 20px;
+    }
+  }
+
+  // .integrated__white-title
+
+  &__white-title {
+    margin-bottom: 56px;
+
+    @media (max-width: $breakpoint992) {
+      margin-bottom: 20px;
+    }
+  }
+
+  // .integrated__white-descr
+
+  &__white-descr {
+    margin-bottom: 56px;
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 140%;
+
+    @media (max-width: $breakpoint992) {
+      margin-bottom: 20px;
+    }
+
+    @media (max-width: $breakpoint768) {
+      font-size: 15px;
+    }
+  }
+
+  // .integrated__white-list
+
+  &__white-list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
+    padding-left: 40px;
+    border-left: 1px solid #D7D7D7;
+    margin-bottom: 100px;
+
+    @media (max-width: $breakpoint992) {
+      margin-bottom: 40px;
+    }
+  }
+
+  // .integrated__white-item
+
+  &__white-item {
+    display: flex;
+    align-items: center;
+    column-gap: 22px;
+    font-weight: 300;
+    line-height: 100%;
+    font-size: 15px;
+  }
+
+  // .integrated__white-item-num
+
+  &__white-item-num {}
+
+  // .integrated__white-item-text
+
+  &__white-item-text {}
+
+  &__white-footer {
+    margin-top: auto;
+  }
+
+  // .integrated__white-label
+
+  &__white-label {
+    margin-bottom: 32px;
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 140%;
+
+    @media (max-width: $breakpoint992) {
+      margin-bottom: 16px;
+    }
+  }
+
+  // .integrated__white-link
+
+  &__white-link {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 20px;
+    padding: 32px;
+    border-radius: 12px;
+    border: 1.5px solid #D7D7D7;
+    background-color: #FFF;
+
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 140%;
+    columns: var(--main-color);
+
+    transition: border-color 0.2s linear;
+
+    &:not(:last-child) {
+      margin-bottom: 16px;
+    }
+
+    &:hover {
+      border-color: #FFA469;
+
+      img {
+        transform: translateX(5px);
+      }
+    }
+
+    img {
+      transition: transform 0.2s linear;
+    }
+
+    @media (max-width: $breakpoint768) {
+      padding: 16px;
+      font-size: 15px;
+    }
+  }
+}
