added new page youtube

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,6 +38,7 @@
 @import './404';
 @import './new-services';
 @import './get-quote';
+@import './youtube-materials';
 @import './footer';
 
 // Libs
