--- a/src/scss/_new-services.scss
+++ b/src/scss/_new-services.scss
@@ -29,41 +29,41 @@
       grid-column: span 6;
     }
 
-    @media (min-width: 1200px) {
+    // @media (min-width: 1200px) {
 
 
-      &:hover {
-        z-index: 2;
-        transform: scale(1.06);
-        box-shadow: 0 10px 65px rgba(43, 51, 60, .4);
-      }
+    //   &:hover {
+    //     z-index: 2;
+    //     transform: scale(1.06);
+    //     box-shadow: 0 10px 65px rgba(43, 51, 60, .4);
+    //   }
 
-      &.grid-column-3 {
-        &:hover {
-          z-index: 2;
-          transform: scale(1.06);
-          box-shadow: 0 10px 65px rgba(43, 51, 60, .4);
-        }
+    //   &.grid-column-3 {
+    //     &:hover {
+    //       z-index: 2;
+    //       transform: scale(1.06);
+    //       box-shadow: 0 10px 65px rgba(43, 51, 60, .4);
+    //     }
 
-      }
+    //   }
 
-      &.grid-column-6 {
-        &:hover {
-          z-index: 2;
-          transform: scale(1.03);
-          box-shadow: 0 10px 65px rgba(43, 51, 60, .4);
-        }
+    //   &.grid-column-6 {
+    //     &:hover {
+    //       z-index: 2;
+    //       transform: scale(1.03);
+    //       box-shadow: 0 10px 65px rgba(43, 51, 60, .4);
+    //     }
 
-      }
+    //   }
 
-      &:hover {
-        background-color: var(--white-color);
+    //   &:hover {
+    //     background-color: var(--white-color);
 
-        .services__more-arrow {
-          transform: translateX(0);
-        }
-      }
-    }
+    //     .services__more-arrow {
+    //       transform: translateX(0);
+    //     }
+    //   }
+    // }
 
     .services__link {
       display: flex;
@@ -384,40 +384,40 @@
       grid-column: span 6;
     }
 
-    @media (min-width: 1200px) {
+    // @media (min-width: 1200px) {
 
 
-      &:hover {
-        z-index: 2;
-        transform: scale(1.06);
-        box-shadow: 0 10px 65px rgba(140, 140, 141, 0.4);
-      }
+    //   &:hover {
+    //     z-index: 2;
+    //     transform: scale(1.06);
+    //     box-shadow: 0 10px 65px rgba(140, 140, 141, 0.4);
+    //   }
 
-      &.grid-column-3 {
-        &:hover {
-          z-index: 2;
-          transform: scale(1.06);
-          box-shadow: 0 10px 65px rgba(140, 140, 141, 0.4);
-        }
+    //   &.grid-column-3 {
+    //     &:hover {
+    //       z-index: 2;
+    //       transform: scale(1.06);
+    //       box-shadow: 0 10px 65px rgba(140, 140, 141, 0.4);
+    //     }
 
-      }
+    //   }
 
-      &.grid-column-6 {
-        &:hover {
-          z-index: 2;
-          transform: scale(1.03);
-          box-shadow: 0 10px 65px rgba(140, 140, 141, 0.4);
-        }
+    //   &.grid-column-6 {
+    //     &:hover {
+    //       z-index: 2;
+    //       transform: scale(1.03);
+    //       box-shadow: 0 10px 65px rgba(140, 140, 141, 0.4);
+    //     }
 
-      }
+    //   }
 
-      &:hover {
-        background-color: var(--white-color);
+    //   &:hover {
+    //     background-color: var(--white-color);
 
-        .services__more-arrow {
-          transform: translateX(0);
-        }
-      }
-    }
+    //     .services__more-arrow {
+    //       transform: translateX(0);
+    //     }
+    //   }
+    // }
   }
 }
