--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -39,6 +39,7 @@
 @import './new-services';
 @import './get-quote';
 @import './youtube-materials';
+@import './landing';
 @import './footer';
 
 // Libs
