--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -459,6 +459,18 @@
       font-weight: 500;
       line-height: 120%;
 
+
+      img {
+        transition: transform 0.2s linear;
+      }
+
+      &:hover {
+
+        img {
+          transform: translateX(5px);
+        }
+      }
+
       img {
         width: 24px;
         height: 24px;
@@ -724,6 +736,585 @@
       margin-bottom: -10px;
       width: fit-content;
       filter: grayscale(1);
+    }
+  }
+}
+
+.landing-comand {
+  padding: 166px 0 272px;
+  background-color: #46474F;
+
+  @media (max-width: $breakpoint992) {
+    padding: 100px 0;
+  }
+
+  @media (max-width: $breakpoint768) {
+    padding: 60px 0 100px;
+  }
+
+
+  // .landing-comand__inner
+
+  &__inner {
+    display: flex;
+    column-gap: 174px;
+
+    @media (max-width: $breakpoint992) {
+      column-gap: 60px;
+    }
+
+    @media (max-width: $breakpoint768) {
+      flex-direction: column;
+      row-gap: 40px;
+    }
+
+  }
+
+  // .landing-comand__info
+
+  &__info {
+    flex: 0 1 435px;
+
+    @media (max-width: $breakpoint768) {
+      flex: 0 1 auto;
+    }
+
+
+    h3 {
+      margin-bottom: 64px;
+      color: #FAF5F2;
+      font-size: 36px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 120%;
+
+      @media (max-width: $breakpoint992) {
+        margin-bottom: 40px;
+        font-size: 24px;
+      }
+    }
+
+    p {
+      max-width: 384px;
+      margin-bottom: 20px;
+      color: #FFF;
+      font-size: 15px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 140%;
+      opacity: 0.6;
+
+      @media (max-width: $breakpoint768) {
+        max-width: 100%;
+      }
+
+    }
+
+    a {
+      display: flex;
+      align-items: center;
+      column-gap: 4px;
+      width: fit-content;
+      color: #FF9F5C;
+      font-size: 15px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 120%;
+
+      img {
+        transition: transform 0.2s linear;
+      }
+
+      &:hover {
+
+        img {
+          transform: translateX(5px);
+        }
+      }
+    }
+  }
+
+  // .landing-comand__picture
+
+  &__picture {
+    position: relative;
+    flex: 0 1 575px;
+
+    @media (max-width: $breakpoint768) {
+      flex: 0 1 auto;
+    }
+
+    img {
+      max-width: 100%;
+    }
+
+    @media (max-width: $breakpoint992) {
+      height: fit-content;
+    }
+  }
+
+  // .landing-comand__video
+
+  &__video {
+    position: absolute;
+    left: -140px;
+    bottom: -80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @media (max-width: $breakpoint992) {
+      width: 140px;
+      left: -40px;
+      bottom: -40px;
+    }
+
+    @media (max-width: $breakpoint768) {
+      width: 180px;
+      left: 50%;
+      bottom: -100px;
+      transform: translateX(-50%);
+    }
+
+  }
+
+  // .landing-comand__video-play
+
+  &__video-play {
+    display: flex;
+    align-items: center;
+    column-gap: 4px;
+    width: fit-content;
+    color: #FF9F5C;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%;
+
+    img {
+      transition: transform 0.2s linear;
+    }
+
+    &:hover {
+
+      img {
+        transform: translateX(5px);
+      }
+    }
+  }
+}
+
+
+.landing-others {
+  padding: 190px 0;
+
+  @media (max-width: $breakpoint992) {
+    padding: 120px 0;
+  }
+
+  @media (max-width: $breakpoint768) {
+    padding: 60px 0;
+  }
+
+  // .landing-others__inner
+
+  &__inner {}
+
+  // .landing-others__free
+
+  &__free {
+    display: flex;
+    align-items: flex-end;
+    padding: 72px;
+    border-radius: 24px;
+    background-color: #46474F;
+    background-image: url('../img/landing/landing-others-free-bg.svg');
+    background-repeat: no-repeat;
+    background-position: bottom;
+    overflow: hidden;
+
+    @media (max-width: $breakpoint992) {
+      padding: 40px;
+    }
+
+    @media (max-width: $breakpoint768) {
+      flex-direction: column;
+      padding: 40px 20px;
+    }
+  }
+
+  // .landing-others__free-info
+
+  &__free-info {
+
+    h3 {
+      margin-bottom: 44px;
+      white-space: nowrap;
+      color: #FFF;
+      font-size: 36px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 120%;
+
+      span {
+        color: #FF9F5C;
+      }
+
+      @media (max-width:1200px) {
+        white-space: normal;
+      }
+
+      @media (max-width: $breakpoint992) {
+        margin-bottom: 20px;
+        font-size: 24px;
+      }
+    }
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      row-gap: 32px;
+      margin-bottom: 72px;
+      max-width: 500px;
+
+      li {
+        display: flex;
+        column-gap: 16px;
+
+        color: #FFF;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 140%;
+
+        img {
+          width: 24px;
+          height: 24px;
+        }
+
+        @media (max-width: $breakpoint768) {
+          font-size: 15px;
+        }
+      }
+
+      @media (max-width: $breakpoint992) {
+        margin-bottom: 40px;
+        row-gap: 24px;
+      }
+    }
+
+    a {
+      height: 56px;
+      background-color: #FFCB75;
+
+      @media (max-width: $breakpoint768) {
+        width: 100%;
+      }
+    }
+  }
+
+  // .landing-others__free-picture
+
+  &__free-picture {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: -72px;
+    margin-left: -50px;
+    margin-right: 70px;
+
+    @media (max-width:1200px) {
+      margin: 0 0 -72px;
+    }
+
+    @media (max-width: $breakpoint992) {
+      margin: 0 -40px -40px 0;
+
+      .get-quote__employee-pic {
+        max-width: fit-content;
+        margin-top: -20px;
+      }
+
+
+      .get-quote__employee-info {
+        left: -20px;
+      }
+    }
+
+    @media (max-width: $breakpoint768) {
+      .get-quote__employee-pic {
+        margin-top: 0;
+      }
+
+      .get-quote__employee-info {
+        left: 0;
+      }
+    }
+  }
+
+  // .landing-others__free-notebook
+
+  &__free-notebook {
+    margin-right: -100px;
+
+    @media (max-width: $breakpoint992) {
+      max-width: 80%;
+      width: 60%;
+    }
+  }
+}
+
+
+.landing-others {
+
+  // .landing-others__after
+
+  &__after {
+    margin-bottom: 154px;
+
+    @media (max-width: $breakpoint768) {
+      margin-bottom: 100px;
+    }
+
+    @media (max-width: $breakpoint768) {
+      margin-bottom: 60px;
+    }
+
+    h3 {
+      margin-bottom: 30px;
+      color: #46474F;
+      text-align: center;
+      font-size: 48px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 114%;
+
+      @media (max-width: $breakpoint768) {
+        margin-bottom: 20px;
+        font-size: 36px;
+      }
+    }
+
+    &>p {
+      margin-bottom: 54px;
+      text-align: center;
+      color: #46474F;
+      font-size: 23px;
+      font-weight: 300;
+      line-height: 140%;
+
+      @media (max-width: $breakpoint768) {
+        margin-bottom: 30px;
+        font-size: 20px;
+      }
+    }
+
+
+    ul {
+      display: grid;
+      grid-template-columns: 184px 184px 184px 1fr;
+      column-gap: 16px;
+      row-gap: 16px;
+
+      @media (max-width: $breakpoint992) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+
+      @media (max-width: $breakpoint768) {
+        grid-template-columns: repeat(1, 1fr);
+      }
+    }
+
+    ul li {
+      display: grid;
+      min-height: 470px;
+      padding: 24px;
+      border-radius: 24px;
+      background-color: #FFF;
+      background-repeat: no-repeat;
+      background-position: right bottom;
+      overflow: hidden;
+
+      .get-quote__employee-name {
+        margin-bottom: 15px;
+        font-size: 15px;
+        font-weight: 700;
+        line-height: 120%;
+      }
+
+      .get-quote__employee-position {
+        margin-bottom: 0;
+        font-size: 13px;
+        font-weight: 500;
+        line-height: 100%;
+      }
+
+
+      p {
+        max-width: 224px;
+        margin-bottom: 40px;
+        color: #46474F;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 120%;
+
+        span {
+          color: #A4A5AF;
+        }
+
+        @media (max-width: $breakpoint768) {
+          font-size: 16px;
+        }
+      }
+
+      h4 {
+        max-width: 276px;
+        margin-bottom: 76px;
+        color: #FFF;
+        font-size: 23px;
+        font-weight: 700;
+        line-height: 140%;
+
+        span {
+          color: #FFA469;
+        }
+
+        @media (max-width: 1200px) {
+          font-size: 20px;
+          margin-bottom: 40px;
+        }
+      }
+
+      &:nth-child(4) {
+        display: flex;
+        justify-content: flex-end;
+        padding: 48px;
+        background-color: #46474F;
+
+        p {
+          color: #fff;
+
+          span {
+            color: #A4A5AF;
+          }
+        }
+
+        @media (max-width: 1200px) {
+          padding: 24px;
+        }
+
+        @media (max-width: $breakpoint992) {
+          grid-column: span 3;
+          justify-content: space-between;
+        }
+
+        @media (max-width: $breakpoint768) {
+          grid-column: span 1;
+          flex-direction: column;
+        }
+      }
+    }
+  }
+
+  // .landing-others__after-info
+
+  &__after-info {}
+
+  // .landing-others__after-comand
+
+  &__after-comand {
+    p {
+      margin-bottom: 24px;
+      color: #FFF;
+      font-size: 11px;
+      font-weight: 400;
+      line-height: 120%;
+    }
+
+    ul {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      column-gap: 0;
+      row-gap: 0;
+      width: fit-content;
+
+      @media (max-width: $breakpoint992) {
+        display: flex;
+        align-items: center;
+      }
+
+      li {
+        display: flex;
+        flex-direction: column;
+        row-gap: 16px;
+        align-items: center;
+        min-height: 0;
+        width: fit-content;
+        text-align: center;
+        background-color: transparent;
+        padding: 0;
+
+
+        img {
+          width: 70px;
+          min-width: 70px;
+          height: 78px;
+          border-radius: 100%;
+          object-fit: cover;
+        }
+
+        h5 {
+          color: #FFF;
+          font-size: 12px;
+          font-weight: 700;
+          line-height: 100%;
+        }
+
+        &:not(:first-child) {
+          margin-left: -8px;
+          background-color: transparent;
+
+          @media (max-width: $breakpoint768) {
+            margin-left: 0;
+          }
+        }
+
+        &:nth-child(4) {
+          padding: 0;
+
+          @media (max-width: 1200px) {
+            padding: 0;
+          }
+
+          @media (max-width: $breakpoint992) {
+            grid-column: span 1;
+          }
+        }
+      }
+    }
+  }
+
+  // .landing-others__after-picture
+
+  &__after-picture {
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    margin-right: -48px;
+    margin-bottom: -48px;
+
+    @media (max-width: 1200px) {
+      margin-right: -24px;
+      margin-bottom: -24px;
+
+      .get-quote__employee-info {
+        bottom: 0;
+      }
+    }
+
+    @media (max-width: 1200px) {
+      img {
+        max-width: 100%;
+      }
     }
   }
 }
