--- a/src/scss/_tariffs.scss
+++ b/src/scss/_tariffs.scss
@@ -443,6 +443,7 @@
       .tariffs__prices-header-select-list {
         opacity: 1;
         max-height: 200px;
+        z-index: 1;
       }
     }
   }
