added new blocks for new page

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -126,7 +126,12 @@ body {
 }
 
 
-
+.button_marquiz__button_blicked.primary-btn {
+  width: 191px;
+  height: 56px !important;
+  overflow: hidden;
+  position: relative;
+}
 
 
 
