--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,6 +40,7 @@
 @import './get-quote';
 @import './youtube-materials';
 @import './landing';
+@import './automatic-hr';
 @import './footer';
 
 // Libs
